--- a/src/App.css
+++ b/src/App.css
@@ -50,3 +50,11 @@
 .overflow-auto {
   overflow-y: auto;
 }
+
+.margin-left-auto {
+  margin-left: auto;
+}
+
+.margin-right-auto {
+  margin-right: auto;
+}
