--- a/src/components/App.css
+++ b/src/components/App.css
@@ -39,11 +39,19 @@
 
 .flex {
   display: flex;
-  flex: 1;
   min-width: 0;
 }
 
+.flex-1 {
+  flex: 1;
+}
+
+.flex-2 {
+  flex: 2;
+}
+
 .flex-column {
+  flex: 1;
   display: flex;
   flex-direction: column;
   min-width: 0;
