--- a/src/components/App.css
+++ b/src/components/App.css
@@ -50,6 +50,11 @@
   flex: 2;
 }
 
+.flex-align-center {
+  align-items: center;
+  justify-content: center;
+}
+
 .flex-column {
   flex: 1;
   display: flex;
