--- a/src/components/App.css
+++ b/src/components/App.css
@@ -74,6 +74,14 @@
   margin-right: auto;
 }
 
+.margin-right-5 {
+  margin-right: 5px;
+}
+
+.margin-left-5 {
+  margin-left: 5px;
+}
+
 .margin-auto {
   margin-left: auto;
   margin-right: auto;
