add margin for likes

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -55,6 +55,10 @@
   justify-content: center;
 }
 
+.flex-justify-center {
+  justify-content: center;
+}
+
 .flex-column {
   flex: 1;
   display: flex;
@@ -80,6 +84,14 @@
 
 .margin-left-5 {
   margin-left: 5px;
+}
+
+.margin-right-10 {
+  margin-right: 10px;
+}
+
+.margin-left-10 {
+  margin-left: 10px;
 }
 
 .margin-auto {
